--- a/style.css
+++ b/style.css
@@ -348,9 +348,9 @@ margin-top:18px;
 display:inline-block;
 background:var(--primary);
 color:#fff;
-padding:10px 20px;
-border-radius:50px;
+padding:7px 16px; /* antes 10x20 — aqui diminuímos */
+border-radius:40px;
 text-decoration:none;
-font-weight:600;
-font-size:.95rem;
+font-weight:500; /* mais leve */
+font-size:.88rem; /* menor */
 }
